[package]
name = "tokio_scoped_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-scoped = "0.2.0"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
