[project]
name = "plot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bruce Eckel", email = "mindviewinc@gmail.com" }
]
dependencies = [
    "matplotlib>=3.7.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
